--- a/Packages/EnkaKit/Sources/EnkaKit/Resources/Localizable.xcstrings
+++ b/Packages/EnkaKit/Sources/EnkaKit/Resources/Localizable.xcstrings
@@ -676,7 +676,7 @@
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "本 App 内显示的《原神》角色证件照的背景图腾默认用于同时彰显该角色的命途与元素能力属性。元素属性体现在图腾的配色上。如果没有匹配的命途，则会显示元素图腾。此时所用的元素图腾素材取自《崩坏：星穹铁道》（水、岩、草除外），代表每个角色的提瓦特元素。这些图腾的显示与否可在 UI 设置中切换。"
+            "value" : "本 App 内显示的《原神》角色证件照的背景图腾默认用于同时彰显该角色的命途与元素能力属性。元素属性体现在图腾的配色上。如果没有匹配的命途，则会显示元素图腾。此时所用的元素图腾素材取自《崩坏：星穹铁道》（水、岩、草除外），代表每个角色的提瓦特元素。这些图腾的显示与否可在 UI 设定中切换。"
           }
         },
         "zh-Hant" : {
